[package]
name = "hwtop"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false

[dependencies]
dbus-pure = { git = "https://github.com/Arnavion/dbus-pure", branch = "master" }
dbus-pure-macros = { git = "https://github.com/Arnavion/dbus-pure", branch = "master" }
libc = { version = "0.2", default-features = false }
sensord-common = { path = "../sensord-common" }
serde = { version = "1", default-features = false }
terminal = { git = "https://github.com/Arnavion/terminal", branch = "main" }
