[package]
name = "sensord-common"
version = "0.1.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2021"

[dependencies]
dbus-pure = { git = "https://github.com/Arnavion/dbus-pure", branch = "master" }
dbus-pure-macros = { git = "https://github.com/Arnavion/dbus-pure", branch = "master" }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
