[package]
name = "sensord-common"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2024"
publish = false

[dependencies]
dbus-pure = { git = "https://github.com/Arnavion/dbus-pure", branch = "master" }
dbus-pure-macros = { git = "https://github.com/Arnavion/dbus-pure", branch = "master" }
serde = { version = "1", default-features = false, features = [
	"derive",
] }

[package.metadata.cargo-machete]
ignored = [
	"dbus-pure", # used in expansion of dbus-pure-macros
]
