[package]
name = "sensord"
version = "0.1.0"
authors = ["Arnavion <arnavion@gmail.com>"]
edition = "2021"

[dependencies]
backtrace = "0.3"
dbus-pure = { git = "https://github.com/Arnavion/dbus-pure", branch = "master" }
dbus-pure-macros = { git = "https://github.com/Arnavion/dbus-pure", branch = "master" }
libc = "0.2"
regex = "1"
sensord-common = { path = "../sensord-common" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
