[package]
name = "sensord"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false

[dependencies]
dbus-pure = { git = "https://github.com/Arnavion/dbus-pure", branch = "master" }
dbus-pure-macros = { git = "https://github.com/Arnavion/dbus-pure", branch = "master" }
libc = { version = "0.2", default-features = false }
regex = { version = "1.9", default-features = false }
sensord-common = { path = "../sensord-common" }
serde = { version = "1.0.103", default-features = false, features = [
	"derive",
] }
toml = { version = "0.7", default-features = false, features = [
	"parse", # for toml::from_str
] }
